Fix double scrollbar on inbox

--- a/voice.css
+++ b/voice.css
@@ -106,8 +106,6 @@ a.gc-tab-sel {
     position: absolute;
     top: 0;
     right: 0;
-    padding-top: 5px;
-    padding-bottom: 5px;
 }
 
 #gc-goto-inbox {
